kubernetes/apps/default/ganymede/base/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ganymede-frontend-service
spec:
  selector:
    app: ganymede-frontend
  ports:
    - name: ganymede-frontend-http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
